--- a/eureka-client-x/src/main/resources/application.yml
+++ b/eureka-client-x/src/main/resources/application.yml
@@ -1,11 +1,13 @@
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-
 server:
   port: 8762
 
 spring:
   application:
     name: eureka-client-x
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    instance-id: ${spring.application.name}:${server.port}
