--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -9,7 +9,8 @@ eureka:
   instance:
     hostname: localhost
   client:
-    registerWithEureka: false
-    fetchRegistry: false
+    # 表示自己是一个Eureka注册中心，无需自己注册自己
+    register-with-eureka: false
+    fetch-registry: false
     service-Url:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
