--- a/service-feign/src/main/resources/application.yml
+++ b/service-feign/src/main/resources/application.yml
@@ -1,11 +1,13 @@
-eureka:
-  client:
-    service-Url:
-      defaultZone: http://localhost:8761/eureka/
-
 server:
   port: 8765
 
 spring:
   application:
     name: service-feign
+
+eureka:
+  client:
+    service-Url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    instance-id: ${spring.application.name}:${server.port}
